// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component sanity matches default snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        class="sc-AxjAm sc-AxirZ iwwjDy"
        font-family="body"
        font-size="2"
        font-weight="medium"
        width="full"
      >
        <thead>
          <tr>
            <th>
              Transaction hash
            </th>
            <th>
              Value
            </th>
            <th>
              Recipient
            </th>
            <th>
              Time
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              0xeb...cc0
            </td>
            <td>
              0.10 ETH
            </td>
            <td>
              0x4fe...581
            </td>
            <td>
              March 28 2019 08:47:17 AM +UTC
            </td>
          </tr>
          <tr>
            <td>
              0xsb...230
            </td>
            <td>
              0.11 ETH
            </td>
            <td>
              0x4gj...1e1
            </td>
            <td>
              March 28 2019 08:52:17 AM +UTC
            </td>
          </tr>
          <tr>
            <td>
              0xed...c40
            </td>
            <td>
              0.12 ETH
            </td>
            <td>
              0x3fd...781
            </td>
            <td>
              March 28 2019 08:55:17 AM +UTC
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      class="sc-AxjAm sc-AxirZ iwwjDy"
      font-family="body"
      font-size="2"
      font-weight="medium"
      width="full"
    >
      <thead>
        <tr>
          <th>
            Transaction hash
          </th>
          <th>
            Value
          </th>
          <th>
            Recipient
          </th>
          <th>
            Time
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            0xeb...cc0
          </td>
          <td>
            0.10 ETH
          </td>
          <td>
            0x4fe...581
          </td>
          <td>
            March 28 2019 08:47:17 AM +UTC
          </td>
        </tr>
        <tr>
          <td>
            0xsb...230
          </td>
          <td>
            0.11 ETH
          </td>
          <td>
            0x4gj...1e1
          </td>
          <td>
            March 28 2019 08:52:17 AM +UTC
          </td>
        </tr>
        <tr>
          <td>
            0xed...c40
          </td>
          <td>
            0.12 ETH
          </td>
          <td>
            0x3fd...781
          </td>
          <td>
            March 28 2019 08:55:17 AM +UTC
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table component sanity matches themed snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        class="sc-AxjAm sc-AxirZ SuVzU"
        font-family="body"
        font-size="2"
        font-weight="medium"
        width="full"
      >
        <thead>
          <tr>
            <th>
              Transaction hash
            </th>
            <th>
              Value
            </th>
            <th>
              Recipient
            </th>
            <th>
              Time
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              0xeb...cc0
            </td>
            <td>
              0.10 ETH
            </td>
            <td>
              0x4fe...581
            </td>
            <td>
              March 28 2019 08:47:17 AM +UTC
            </td>
          </tr>
          <tr>
            <td>
              0xsb...230
            </td>
            <td>
              0.11 ETH
            </td>
            <td>
              0x4gj...1e1
            </td>
            <td>
              March 28 2019 08:52:17 AM +UTC
            </td>
          </tr>
          <tr>
            <td>
              0xed...c40
            </td>
            <td>
              0.12 ETH
            </td>
            <td>
              0x3fd...781
            </td>
            <td>
              March 28 2019 08:55:17 AM +UTC
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      class="sc-AxjAm sc-AxirZ SuVzU"
      font-family="body"
      font-size="2"
      font-weight="medium"
      width="full"
    >
      <thead>
        <tr>
          <th>
            Transaction hash
          </th>
          <th>
            Value
          </th>
          <th>
            Recipient
          </th>
          <th>
            Time
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            0xeb...cc0
          </td>
          <td>
            0.10 ETH
          </td>
          <td>
            0x4fe...581
          </td>
          <td>
            March 28 2019 08:47:17 AM +UTC
          </td>
        </tr>
        <tr>
          <td>
            0xsb...230
          </td>
          <td>
            0.11 ETH
          </td>
          <td>
            0x4gj...1e1
          </td>
          <td>
            March 28 2019 08:52:17 AM +UTC
          </td>
        </tr>
        <tr>
          <td>
            0xed...c40
          </td>
          <td>
            0.12 ETH
          </td>
          <td>
            0x3fd...781
          </td>
          <td>
            March 28 2019 08:55:17 AM +UTC
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
